@@ -15,9 +15,9 @@ log = "0.4.0"
 env_logger = "0.8.4"
 iconv = "0.1.1"
 palette = "0.6.0"
-ffmpeg-sys-next = { version = "5.0.1", optional = true, default-features = false, features = ["avcodec", "avformat", "swscale", "build"]}
+ffmpeg-sys-next = { version = "5.1.1", optional = true, default-features = false, features = ["avcodec", "avformat", "swscale", "build"]}
 tesseract-sys = { version = "0.5.12", optional = true, default-features = false}
-leptonica-sys = { version = "0.4.1", optional = true, default-features = false}
+leptonica-sys = { version = "0.4.4", optional = true, default-features = false}
 
 [build-dependencies]
 bindgen = "0.58.1"
